--- a/JupyterNotebook/3_Final Analysis.ipynb
+++ b/JupyterNotebook/3_Final Analysis.ipynb
@@ -22,6 +22,7 @@
     "## [__Analysis__](#2.Analysis)\n",
     "- PCA \n",
     "- LDA\n",
+    "- RandomForest\n",
     "- Clustering\n",
     "-----------------------------------------------------------\n"
    ]
@@ -853,7 +854,8 @@
    "source": [
     "- [PCA](#2.1PCA) \n",
     "- [LDA](#2.2LDA)\n",
-    "- [Clustering](#2.3Clustering)"
+    "- [RandomForest](#2.3RandomForeset)\n",
+    "- [Clustering](#2.4Clustering)"
    ]
   },
   {
@@ -1603,7 +1605,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "library(MASS)\n",
@@ -1654,7 +1658,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pred.rf <- predict(adult.rf,adult.test.norm)"
@@ -1713,7 +1719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3Clustering"
+    "### 2.4Clustering"
    ]
   },
   {
